[package]
name = "udp-jitter-test"
version = "0.1.0"
authors = ["Anton Rapetov <willir29@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"
futures = "0.3.5"
libc = "0.2.70"
async-std = "1.5.0"
rand = { version="0.7.3", features=["small_rng"] }
